final touches, organizing code better, adding a couple extra comments

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -87,7 +87,7 @@
 </body>
 
 <footer>
-  <!-- Footer contains contact information -->
+  <!-- Footer contains contact information and external links to socials and email-->
   <h2 id="Contact">CONTACT ME</h2>
 
   <p> Feel free to get in touch via any of the contact methods below - I am always excited to hear about new ideas and opportunities.</p>
